# dewit_dioxus

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: dewit.rs  lib.rs  main.rs
src/item_model/: id.rs  item_list.rs  list_item.rs  mod.rs  root_list.rs  shared_item.rs
src/test_helpers/: dioxus.rs  mod.rs  vector_asserts.rs
